# status-light

./: .gitignore  LICENSE  Makefile  README.md  assets.py  cli.py  daemon.py  main.py  platformio.ini  pyproject.toml  status-light.service
src/: main.cpp
status_light/: __init__.py  assets.py  cli.py  daemon.py
