[project]
name = "status-light"
version = "0.1.0"
description = "Daemon and CLI program for a 4x4 NeoPixel LED matrix framed and hanging next to my PC."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "platformio>=6.1.19",
    "pyserial>=3.5",
    "pyudev>=0.24.4",
]

[project.scripts]
status-light = "status_light.cli:main"
status-light-daemon = "status_light.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
